[package]
name = "merkletree"
edition = "2021"
rust-version = "1.75"
version = "0.1.0"
license = "MIT"

[features]
scale-codec = ["dep:parity-scale-codec"]

[dependencies]
itertools = "0.12"
parity-scale-codec = { version = "3.1", optional = true }
thiserror = "1.0"

[dev-dependencies]
blake2 = "0.10"
fixed-hash = "0.8"
rand = "0.8"
rand_chacha = "0.3"
rstest = "0.19"
